# vi-rs

.github/workflows/: mayhem.yml
fuzz/: Cargo.toml  Dockerfile
fuzz/fuzz_targets/: parsing-fuzz.rs  telex.rs  validation-fuzz.rs  vi-fuzz.rs  vni-fuzz.rs  vni.rs  word_validation.rs  word_validation_arbitrary.rs
fuzz/mayhemfiles/: Mayhemfile_telex  Mayhemfile_transform  Mayhemfile_vni  Mayhemfile_word_validation
mayhem/: Dockerfile  Mayhemfile  Mayhemfile.parsing  Mayhemfile.validation  Mayhemfile.vni  word_validation_arbitrary.mayhemfile
